--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ main {
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 520px;
     border-radius: 10px;
-    margin-bottom: 100px;
+    margin: 100px 0;
     overflow: hidden;
 }
 
